--- a/apps/app1/project.json
+++ b/apps/app1/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "tv",
+  "name": "app1",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/tv",
+  "sourceRoot": "apps/app1",
   "projectType": "application",
   "tags": [],
-  "// targets": "to see all targets run: nx show project tv --web",
+  "// targets": "to see all targets run: nx show project app1 --web",
   "targets": {}
 }
