--- a/package.json
+++ b/package.json
@@ -8,46 +8,75 @@
     "@emotion/react": "11.11.1",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
+    "lodash": "^4.17.21",
     "next": "~15.1.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@emotion/babel-plugin": "11.11.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
+    "@nx/devkit": "20.6.0",
     "@nx/eslint": "20.6.0",
     "@nx/eslint-plugin": "20.6.0",
     "@nx/jest": "20.6.0",
     "@nx/js": "20.6.0",
     "@nx/next": "20.6.0",
+    "@nx/node": "20.6.0",
+    "@nx/playwright": "20.6.0",
+    "@nx/react": "20.6.0",
+    "@nx/storybook": "20.6.0",
+    "@nx/vite": "20.6.0",
+    "@nx/web": "20.6.0",
     "@nx/workspace": "20.6.0",
+    "@playwright/test": "^1.36.0",
+    "@storybook/addon-essentials": "8.6.7",
+    "@storybook/addon-interactions": "^8.4.6",
+    "@storybook/core-server": "8.6.7",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react": "8.6.7",
+    "@storybook/react-vite": "8.6.7",
+    "@storybook/test-runner": "^0.19.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@swc/plugin-emotion": "^2.5.67",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^20.0.0",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "eslint-config-next": "14.2.16",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.6.0",
     "prettier": "^2.6.2",
+    "storybook": "8.6.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "vite": "^5.0.0"
   }
 }
