--- a/tools/src/generators/files/component/__name__.stories.tsx.template
+++ b/tools/src/generators/files/component/__name__.stories.tsx.template
@@ -1,13 +1,13 @@
 import type { Meta, StoryObj } from '@storybook/react';
-import { <%= name%> } from './<%= name%>';
+import { <%= _.capitalize(name)%> } from './<%= name%>';
 
-const meta: Meta<typeof <%= name%>> = {
-  component: <%= name%>,
+const meta: Meta<typeof <%= _.capitalize(name)%>> = {
+  component: <%= _.capitalize(name)%>,
   title: '<%= name%>',
 };
 export default meta;
-type Story = StoryObj<typeof <%= name%>>;
+type Story = StoryObj<typeof <%= _.capitalize(name)%>>;
 
-export const Primary = {
+export const Primary:Story = {
   args: {},
 };
