--- a/apps/app1/project.json
+++ b/apps/app1/project.json
@@ -5,5 +5,13 @@
   "projectType": "application",
   "tags": [],
   "// targets": "to see all targets run: nx show project app1 --web",
-  "targets": {}
+  "targets": {
+    "codegen": {
+      "executor": "@monorepos/tools:codegen",
+      "options": {}
+    },
+    "dev": {
+      "dependsOn": ["codegen"]
+    }
+  }
 }
