--- a/tools/package.json
+++ b/tools/package.json
@@ -9,5 +9,6 @@
     "@nx/devkit": "20.6.0",
     "tslib": "^2.3.0"
   },
-  "generators": "./generators.json"
+  "generators": "./generators.json",
+  "executors": "./executors.json"
 }
