--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
     "lodash": "^4.17.21",
-    "next": "~15.1.4",
+    "next": "~15.1.7",
+    "nextra": "^4.2.17",
+    "nextra-theme-docs": "^4.2.17",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
